_sass/common.scss
@import "touchy";

$logo-height: 125px;

$sidebar-width: 250px;

$bs-break-sm: 576px;
$bs-break-md: 768px;
$bs-break-lg: 992px;
$bs-break-xl: 1200px;

/* famous colors */
$comics-color: rgba(39,147,242, 1);
$articles-color: rgba(75,191,83, 1);
$videos-color: rgba(255,140,90, 1);
$junk-color: rgba(106,57,217, 1);
$generic-color: rgba(64, 1, 55, 1);

@function transparency-ize($color-name, $transparency){
  $red: red($color-name);
  $green: green($color-name);
  $blue: blue($color-name);
  @return rgba($red, $green, $blue, $transparency)
}


html{ 
  width:100%; 
  height:100%; 
  margin:0;  
  
  body{
    width:100%; 
    height:100%; 
    font-family: "Bitter", "Georgia", serif;
    font-size: 16px;
    font-weight: 400;
    color: #333;
  }
}

@media (prefers-color-scheme: dark) {
  html,body,main,{
    background-color: #0a0e14;
    color: #e4e4e4;
  } 
  pre,code,.jumbotron{
    background-color: lighten(#0a0e14, 10);
    color: darken(#e4e4e4, 10);
  }
  .page-item{
    .page-link{
      color: #007bff;
      background-color: lighten(#0a0e14, 10);
      border: 1px solid darken(#0a0e14, 10);

      &:hover{
        background-color: lighten(#0a0e14, 5);
      }
    }
    &.active{
      .page-link{
        color: #e4e4e4;
        background-color: darken(#007bff, 10);
        border: 1px solid darken(#0a0e14, 10);
      }
    }
  }
  svg.angle-border-mask{
    fill: #0a0e14 !important;
  }
  h1,h2,h3,h4,h5,h6{
    color: #e4e4e4;
  }
  a{
    color: #007bff;
  }
  .comic-nav{
    color: #0a0e14;
  }
}

.logo-top svg.wnv-icon{
  position: relative;
  top: 20px;
  left: 20px;
  height: $logo-height;
  /* https://github.com/WarrantyNowVoid/jekyll-wnv/issues/1 */
  transform: translateZ(1px);

  .chunk{
    fill: #888;
  }
}

.title-font{
  font-family: 'Londrina Solid';
  font-weight: 400;

  &.light{
    font-weight: 300;
  }

  &.thin{
    font-weight: 100;
  }
}

span.signature{
  font-size:22px; 
  font-family:cursive;
}

// bootstrap, wth?
blockquote{
  padding: 0 0 0 15px;
  margin: 0 0 20px;
  border-left: 5px solid #eeeeee;

  p{
    margin-bottom: 0;
    font-size: 17.5px;
    font-weight: 300;
    line-height: 1.25;
  }
}

pre{
  padding: 10px;
  border-radius: 8px;
}

.post-preview{
  color: #fff;
  display: block;
  float: left;
  width: 100%;
  height: 300px;
  margin: 25px 0;
  overflow: hidden;
  position:relative;

  @media (min-width: $bs-break-sm) {
    width: 90%;
    margin-left: 20px;
  }

  @media (min-width: $bs-break-md) {
    width: 90%;
    margin-left: 30px;
  }

  @media (min-width: $bs-break-lg) {
    width: 45%;
    height: 250px;
    margin-left: 30px;
  }

  @media (min-width: $bs-break-xl) {
    width: 45%;
    margin-left: 35px;
  }

  a{
    color: #fff;
  }

  img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index:2;

    &.auto-thumbnail{
      width: 200%;
      height: 200%;
      object-fit: none;
      object-position: left top;
      margin: 0px;
      margin-left: -40%;
      margin-top: -10%;
    }
  }

  .details-holster{
    width: 100%;
    height: 100%;
    padding: 10px;
    background-color: rgba(0,0,0,0.7);
    position: absolute;
    top: 200px;
    left: 0;
    z-index: 1;
    transition-property: top;
    transition-duration: 0.5s;

    @media (min-width: $bs-break-lg) {
      top: 150px;
    }

    .first-look{
      transition-property: min-height;
      transition-duration: 0.5s;
      min-height: 100px;

      &:hover{
        min-height:50px;
      }
    }

    h5{
      text-shadow: 1px 1px 2px #000;
      font-size: 24px;
    }

    p{
      text-shadow: 1px 1px 2px #000;
      font-size: 14px;

      @media (min-width: $bs-break-md) {
        font-size: 16px;
      }

      @media (min-width: $bs-break-xl) {
        font-size: 16px;
      }

      .badge {
        vertical-align: middle;
        margin-right: 5px;
        color: #fff;
      }
    }

    &:hover{
      top: 0;
    }
  }
}

.badge {
  font-weight: normal;
  text-shadow: none;
  color: #333;

  &.comics{
    background-color: $comics-color;
  }

  &.articles{
    background-color: $articles-color;
  }

  &.videos{
    background-color: $videos-color;
  }

  &.junk{
    background-color: $junk-color;
  }
}

footer{
  position: relative;
  padding-top: 20px;
  padding-bottom: 20px;
  width: 100%;
  color: #fff;
  background-color: #111;
  z-index: 2;

  .row.lower{
    margin-top: 20px;
  }

  .links{
    a{
      display: block;
    }
  }

  .follow-links{
    a{
      display: inline-block;
      margin-right: 15px;
      font-size: 40px;
      color: #fff;
      transition-property: color;
      transition-duration: 0.3s;

      &:hover{
        color: #007bff;
      }
    }
  }

  .logos{
    text-align: center;

    .site-logo{
      display: inline-block;
      font-size: 18px;
    
      @media (min-width: $bs-break-sm) {
        font-size: 20px;
      }

      @media (min-width: $bs-break-md) {
        font-size: 23px;
      }

      @media (min-width: $bs-break-xl) {
        font-size: 22px;
      }

      @media (min-width: $bs-break-xl){
        font-size: 28px;
      }

    }

    a{
      font-size: 24px;
      color: #c0c0c0;
      display: inline-block;
    
      @media (min-width: $bs-break-sm) {
        font-size: 22px;
      }

      @media (min-width: $bs-break-md) {
        font-size: 25px;
      }

      @media (min-width: $bs-break-xl){
        font-size: 28px;
      }
    }
  }

  #license-text{
    color: #c0c0c0;
    display: inline-block;
    line-height: 1.1;
  }

  .wnv-icon{
    height: 20px;

    @media (min-width: $bs-break-md) {
      height: 25px;
    }

    @media (min-width: $bs-break-lg) {
      height: 30px;
    }

    @media (min-width: $bs-break-xl){
      height: 40px;
    }

    .chunk{
      fill: #fff;
    }
  }
}

